# Hacktoberfest2k25_cpp_MemoryCardFlipGame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Card.cpp  Contributions.md  Game.cpp  GameBoard.cpp  IMPLEMENTATION_GUIDE.md  Instructions to play.txt  LICENSE  Makefile  PR_RESOLUTION.md  PULL_REQUEST_SUMMARY.md  QUICK_SUMMARY.md  README.md  SETTINGS_FEATURE_SUMMARY.md  SETTINGS_MENU_IMPLEMENTATION.md  SETUP.md  TIMER_FEATURE_SUMMARY.md  TIMER_IMPLEMENTATION.md  cmake_install.cmake  test_main.cpp
include/: AudioManager.h  Card.h  Game.h  GameBoard.h  ScoreManager.h  Utils.h
src/: AudioManager.cpp  Card.cpp  Game.cpp  GameBoard.cpp  ScoreManager.cpp  Utils.cpp  main.cpp  test.cpp
tests/: test.cpp  test_main.cpp
